<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milkwhite"
    tools:context=".presentation.fragments.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/milkwhite"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorOnSecondary"
            android:elevation="6dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                app:layout_scrollFlags="scroll|enterAlways">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp">

                    <ImageView
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/menu_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_semibold"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/profile"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/myprofile" />


                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/searchField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableEnd="@drawable/search"
            android:elevation="3dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/search_image_or_location"
            android:padding="10dp"
            android:textSize="@dimen/h4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/no_recent_searches" />

            <TextView
                android:id="@+id/textClear"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/clear_searches" />

        </RelativeLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>