<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milkwhite"
    tools:context=".presentation.fragments.HomeFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/milkwhite"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorOnSecondary"
                android:elevation="6dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:gravity="center_vertical"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp">

                        <ImageView
                            android:id="@+id/menu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@drawable/menu_icon" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_semibold"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/profile"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@drawable/myprofile" />


                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding15"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/nt_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardCornerRadius="7dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding15"
                    tools:ignore="RtlSymmetry">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/a_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/a_image"
                            android:layout_width="@dimen/profile_size"
                            android:layout_height="@dimen/profile_size"
                            android:scaleType="centerCrop"
                            android:src="@drawable/myprofile" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/padding15"
                        android:layout_marginEnd="@dimen/padding15"
                        android:layout_toEndOf="@id/a_card"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/pi_price_reco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/profile_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/h4" />

                        <TextView
                            android:id="@+id/pi_description_reco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:singleLine="true"
                            android:text="@string/profile_address"
                            android:textColor="@color/lightdark" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_forward" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nt_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10"
                android:background="@color/white"
                app:cardCornerRadius="7dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding15"
                    tools:ignore="RtlSymmetry">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/b_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/b_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/info" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/b_card"
                        android:layout_marginStart="@dimen/padding15"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/terms"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h4" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_forward" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nt_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10"
                android:background="@color/white"
                app:cardCornerRadius="7dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding15"
                    tools:ignore="RtlSymmetry">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/c_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/c_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/question" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/padding15"
                        android:layout_toEndOf="@id/c_card"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/help"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h4" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_forward" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nt_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding10"
                android:background="@color/white"
                app:cardCornerRadius="7dp"
                app:cardElevation="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="@dimen/padding15"
                    tools:ignore="RtlSymmetry">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/d_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/d_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/android" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/padding15"
                        android:layout_toEndOf="@id/d_card"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h4" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/arrow_forward" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>